# pdf-parser-benchmark

./: .gitignore  BLOG_POST.md  README.md  main.py  pyproject.toml
notebooks/: pdf_parser_bench.ipynb
notebooks/liteparse_runner/: index.mjs
